@@ -1,4 +1,6 @@
 v3.?.? (202?-??-??)
+ * The MIX (modulator additive volume) parameter can now be controlled with
+   envelopes and polyphonic LFOs.
  * New preset: Expressive Saw, a preset where your playing style can have
    dramatic effects on the sound.
  * Bugfix: LoongArch VST3 packaging has been fixed in the source distribution.
